--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "font-loader": "^0.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "jquery": "^3.2.1",
